<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">TH</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="rememberPassword">Remember Password</string>
<string name="login">Login</string>
<string name="user">User</string>
<string name="accept">Accept</string>
<string name="fillUserName">You need to Fill the username</string>
<string name="error_login_exists_message">error_login_exists_message</string>
<string name="error_incorrect_password_message">error_incorrect_password_message</string>
<string name="error_instance_not_found_message">error_instance_not_found_message</string>
<string name="error_client_exception">error_client_exception</string>
<string name="ok">OK</string>
<string name="error_server_error_message">error_server_error_message</string>
<string name="server_offline">server_offline</string>
<string name="connection_lost">Connection Lost</string>
<string name="sqlite_error">sqlite_error</string>


<string name="fg_no_cities">fg_no_cities</string>
<string name="logout">Logout</string>
<string name="find_games">Find Games</string>
<string name="name">Name</string>
<string name="description">Description</string>
<string name="send_message">Send Message</string>
<string name="gamename">Gamename</string>
<string name="teamname">Teamname</string>
<string name="take_hint">Take Hint</string>
<string name="city">City</string>
<string name="cancel">Cancel</string>
<string name="send">Send</string>
<string name="message">Message</string>
<string name="info_user">User Info</string>
<string name="info_hint">Hint Info</string>
<string name="update">Update</string>
<string name="abandon_game">Abandon Game</string>
<string name="my_location">My Location</string>
<string name="message_sent">Message Sent</string>
<string name="by_city">By city</string>
<string name="by_distance">By distance</string>
<string name="here_in">Here, in</string>
<string name="play_game">Play Game</string>
<string name="sep"> : </string>
<string name="email">Email</string>
<string name="country">Country</string>
<string name="phone">Phone</string>
<string name="surname">Surname</string>
<string name="preferences">preferencias</string>
<string name="prefs_general">General</string>
<string name="info_hidehint">info_hidehint</string>
<string name="info_hidegoal">info_hidegoal</string>
<string name="info_goal">info_goal</string>
<string name="take_goal">take_goal</string>
<string name="choose_city_page_title">Select a city...</string>
<string name="choose_game_page_title">Select a game...</string>
<string name="choose_team_page_title">Select a team...</string>
<string name="game_ishasfinished">El juega ha terminado</string>
</resources>
