<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dsu_tv_username"></TextView>

</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dsu_bt_sendmsg" android:text="@string/send_message"></Button>


</TableRow>
</TableLayout>
