<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dsh_name"></TextView>

</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dsh_desc"></TextView>

</TableRow>
</TableLayout>
