<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
   
		<LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/gamename"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/uip_game_name"/>
        
		</LinearLayout>
				<LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/teamname"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/uip_team_name"/>
            
    </LinearLayout>
</LinearLayout>
