<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <ImageView
        android:src="@drawable/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img"
    />
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/name"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:id="@+id/vg_game_name"/>
        
</LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            R.string.<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/city"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sep"></TextView><TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:id="@+id/game_city"/>
        
</LinearLayout>
    </LinearLayout>
</LinearLayout>